--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 7.x.y-a.b.c-->
-  <version>7.4-HEAD-SNAPSHOT</version>
+  <version>7.4.1-37.1.0-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,8 +34,8 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.4-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
-    <elasticsearch.version>7.4.0</elasticsearch.version>
+    <enterprise-modules.version>7.4.1-37.1.0-SNAPSHOT</enterprise-modules.version>
+    <elasticsearch.version>7.4.1</elasticsearch.version>
     
     <!-- deps -->
     <netty-native.version>2.0.25.Final</netty-native.version>
