--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ stages:
 verify:
   stage: test
   script:
-  - sudo ./smoketest.sh
+  - ./smoketest.sh
   - if [ "$CI_COMMIT_REF_NAME" == "master" ]; then mvn -U -Pcoverage verify; else mvn -U verify; fi
   artifacts:
     reports:
