--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,8 @@ stages:
 verify:
   stage: test
   script:
+  - sudo chown -R circleci ./
+  - ls -la  
   - ./smoketest.sh
   - if [ "$CI_COMMIT_REF_NAME" == "master" ]; then mvn -U -Pcoverage verify; else mvn -U verify; fi
   artifacts:
