--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository "
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
   SG_JAVA_BUILD_VERSION: "11"
+  SG_TEST_OPENSSL_OPT: "true"
 
 image: circleci/openjdk:${SG_JAVA_BUILD_VERSION}-jdk-browsers
 
