--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-6</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>6.8-HEAD-SNAPSHOT</version>
+  <version>6.8.4-25.5-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,9 +34,9 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8-HEAD-SNAPSHOT</sgssl.version>
-    <enterprise-modules.version>6.8-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
-    <elasticsearch.version>6.8.0</elasticsearch.version>
+    <sgssl.version>6.8.4-25.7-SNAPSHOT</sgssl.version>
+    <enterprise-modules.version>6.8.4-34.5-SNAPSHOT</enterprise-modules.version>
+    <elasticsearch.version>6.8.4</elasticsearch.version>
     
     <!-- deps -->
     <netty-native.version>2.0.20.Final</netty-native.version>
@@ -65,6 +65,19 @@
     <system>GitHub</system>
     <url>https://github.com/floragunncom/search-guard/issues</url>
   </issueManagement>
+
+  <repositories>
+      <repository>
+         <id>elasticsearch-releases</id>
+         <url>https://artifacts.elastic.co/maven</url>
+         <releases>
+            <enabled>true</enabled>
+         </releases>
+         <snapshots>
+            <enabled>false</enabled>
+         </snapshots>
+      </repository>
+   </repositories>
 
   <dependencies>
     <!-- Search Guard SSL -->
