--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <properties>
     <sgssl.version>6.8.4-25.7</sgssl.version>
-    <enterprise-modules.version>6.8.4-34.5-SNAPSHOT</enterprise-modules.version>
+    <enterprise-modules.version>6.8.4-34.5</enterprise-modules.version>
     <elasticsearch.version>6.8.4</elasticsearch.version>
     
     <!-- deps -->
