--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
   SG_JAVA_BUILD_VERSION: "11"
 
-image: openjdk:${SG_JAVA_BUILD_VERSION}
+image: circleci/openjdk:${SG_JAVA_BUILD_VERSION}-jdk-browsers
 
 cache:
   key: "$CI_COMMIT_REF_SLUG"
