--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository "
   SG_JAVA_BUILD_VERSION: "11"
 
-image: circleci/openjdk:${SG_JAVA_BUILD_VERSION}-jdk-browsers
+image: maven:3.6-jdk-${SG_JAVA_BUILD_VERSION}
 
 cache:
   key: "$CI_COMMIT_REF_SLUG"
@@ -10,7 +10,7 @@ cache:
   - .m2/repository
 
 before_script:
-- sudo rm -rf /var/lib/apt/lists/* && sudo apt-get update -yqq && sudo apt-get install -yqq libapr1 openssl libxml2-utils
+- rm -rf /var/lib/apt/lists/* && apt-get update -yqq && apt-get install -yqq apt-utils jq perl libapr1 openssl libxml2-utils curl uuid-runtime ftp gnupg2 netcat pinentry-tty expect psmisc xmlstarlet sudo
 - echo "VERSIONS:"
 - uname -a;java -version;openssl version
 
