--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 7.x.y-a.b.c-->
-  <version>7.5-HEAD-SNAPSHOT</version>
+  <version>7.5.0-37.1.0-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.5-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
+    <enterprise-modules.version>7.5.0-37.1.0-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>7.5.0</elasticsearch.version>
     
     <!-- deps -->
