[AUTO][ci skip] Set enterprise modules version to 7.5.0-37.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.5.0-37.1.0-SNAPSHOT</enterprise-modules.version>
+    <enterprise-modules.version>7.5.0-37.1.0</enterprise-modules.version>
     <elasticsearch.version>7.5.0</elasticsearch.version>
     
     <!-- deps -->
