--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-6</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>6.8.5-25.6-SNAPSHOT</version>
+  <version>6.8.6-25.5-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,9 +34,9 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8.5-25.7</sgssl.version>
-    <enterprise-modules.version>6.8.5-34.6-SNAPSHOT</enterprise-modules.version>
-    <elasticsearch.version>6.8.5</elasticsearch.version>
+    <sgssl.version>6.8.6-25.7-SNAPSHOT</sgssl.version>
+    <enterprise-modules.version>6.8.6-34.5-SNAPSHOT</enterprise-modules.version>
+    <elasticsearch.version>6.8.6</elasticsearch.version>
     
     <!-- deps -->
     <netty-native.version>2.0.20.Final</netty-native.version>
