--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.5.1-37.1.0</enterprise-modules.version>
+    <enterprise-modules.version>7.5.1-37.2.0-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>7.5.1</elasticsearch.version>
     
     <!-- deps -->
