--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 7.x.y-a.b.c-->
-  <version>7.5.1-38.0.0-api-SNAPSHOT</version>
+  <version>7.5.1-38.0.0-api</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -57,7 +57,7 @@
     <url>https://github.com/floragunncom/search-guard</url>
     <connection>scm:git:git@github.com:floragunncom/search-guard.git</connection>
     <developerConnection>scm:git:git@github.com:floragunncom/search-guard.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v7.5.1-38.0.0-api</tag>
   </scm>
 
   <issueManagement>
