--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8.8-25.7-SNAPSHOT</sgssl.version>
+    <sgssl.version>6.8.8-25.7</sgssl.version>
     <enterprise-modules.version>6.8.8-34.5-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>6.8.8</elasticsearch.version>
     
