Adding changes from es-6.8.4

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
     <url>https://github.com/floragunncom/search-guard/issues</url>
   </issueManagement>
 
+   <repositories>
+      <repository>
+         <id>elasticsearch-releases</id>
+         <url>https://artifacts.elastic.co/maven</url>
+         <releases>
+            <enabled>true</enabled>
+         </releases>
+         <snapshots>
+            <enabled>false</enabled>
+         </snapshots>
+      </repository>
+   </repositories>
+
   <dependencies>
     <!-- Search Guard SSL -->
     <dependency>
