--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-6</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>6.8.8-25.5-SNAPSHOT</version>
+  <version>6.8.8-25.6</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,8 +34,8 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8.8-25.7-SNAPSHOT</sgssl.version>
-    <enterprise-modules.version>6.8.8-34.5-SNAPSHOT</enterprise-modules.version>
+    <sgssl.version>6.8.8-25.7</sgssl.version>
+    <enterprise-modules.version>6.8.8-34.5</enterprise-modules.version>
     <elasticsearch.version>6.8.8</elasticsearch.version>
     
     <!-- deps -->
