--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
   <parent>
     <groupId>com.floragunn</groupId>
     <artifactId>search-guard-parent</artifactId>
-    <version>6.22.1</version>
+    <version>6.22.2</version>
   </parent>
 
   <artifactId>search-guard-6</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>6.8.9-25.6</version>
+  <version>6.8.10-25.6-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,9 +34,9 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8.9-25.7</sgssl.version>
-    <enterprise-modules.version>6.8.9-34.5</enterprise-modules.version>
-    <elasticsearch.version>6.8.9</elasticsearch.version>
+    <sgssl.version>6.8.10-25.7</sgssl.version>
+    <enterprise-modules.version>6.8.10-34.5</enterprise-modules.version>
+    <elasticsearch.version>6.8.10</elasticsearch.version>
     
     <!-- deps -->
     <netty-native.version>2.0.20.Final</netty-native.version>
